--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,8 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="ToolbarDarkTheme" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="android:textColorSecondary">@android:color/white</item>
+    </style>
+
 </resources>
