--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,8 +12,6 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
-    <style name="ToolbarDarkTheme" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
-        <item name="android:textColorSecondary">@android:color/white</item>
-    </style>
+    <style name="ToolbarDarkTheme" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
 
 </resources>
