--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#443A5C</color>
     <color name="colorPrimaryDark">#443A5C</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#36B2D5</color>
     <color name="yellow">#FFD842</color>
     <color name="black">#212121</color>
 </resources>
